# sqlite-vec-rag

./: .gitignore  CMakeLists.txt  INTEGRATION.md  LICENSE  README.md  SETUP_SQLITE3.md  check_db.bat  download_sqlite3.ps1  download_sqlite_vec.ps1
examples/: main.cpp
include/: rag_engine.h  sqlite_vec_extension.h  vector_store.h
src/: sqlite_vec_extension.cpp  vector_store.cpp
